# Jlang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  static-analysis.yml  test.yml  validate-commit-messages.yml
samples/: sample.j
scripts/: check-commit-messages.sh  format.sh
src/: Main.cpp
src/AST/: Ast.h
src/AST/Expressions/: Expressions.h
src/AST/Statements/: Statements.h
src/AST/TopLevelDecl/: TopLevelDecl.h
src/CodeGen/: AstVisitor.h  CodeGen.cpp  CodeGen.h
src/Common/: Assert.h  Logger.h
src/Enums/: NodeTypes.h  TokenTypes.h
src/Lexer/: Lexer.cpp  Lexer.h
src/Parser/: Parser.cpp  Parser.h
src/Types/: Token.h
